<resources>
    <string name="app_name">TikSta</string>
    <string name="tiktok">TikTok</string>
    <string name="instagram">Instagram</string>
    <string name="max_ad_counter">6</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="blog">Blog</string>
    <string name="info">Info</string>
    <string name="hashtags_for_tiktok">Hashtags for TikTok:</string>
    <string name="hashtags_for_instagram">Hashtags for Instagram:</string>
    <string name="recover_all_hashtags">Recover all hashtags</string>
    <string name="copy">copy</string>
    <string name="loading">Loading…</string>
    <string name="tiksta">TikSta</string>
    <string name="tiksta_main_description">TikSta is a smart application which will help you to choose the most relevant and trending hashtags for your posts even considering the limits set by TikTok and Instagram for the length of the post and, of course, the length of your post if you paste it.</string>
    <string name="blog_description">We also run a blog, where we post some interesting groups of hashtags which will exactly help you to promote your TikTok and Instagram accounts. There you can find hashtags for different topics or top trending and most posted and viewed hashtags.</string>
    <string name="about_us">About us</string>
    <string name="developed_by">This app is developed by:</string>
    <string name="github_muhammadjon">Muhammadjon Hakimov</string>
    <string name="github_amirjon">Amirjon Qodirov</string>
    <string name="github_behruz">Behruz Mansurov</string>
    <string name="mistakes_advices">If something goes wrong, if you find any mistakes or if you have any advices, business offers or words of gratitude, you can email us at:</string>
    <string name="mail_muhammadjon">hakimov0777@gmail.com</string>
    <string name="mail_amirjon">amirqodirov8383@gmail.com</string>
    <string name="mail_behruz">bekha.m2000.bm@gmail.com</string>
    <string name="search_hashtags">Search hashtags</string>
    <string name="consider_post_length">Consider the length of your post in our calculations?</string>
    <string name="display_post_along_with_hashtags">Display post along with found hashtags?</string>
    <string name="your_post_here">post here…</string>
    <string name="hashtag_theme_here">hashtag here…</string>
    <string name="submit">Submit</string>
    <string name="hashtag_icon">Hashtag Icon</string>
    <string name="test">Test</string>
    <string name="all_hashtags_removed">All hashtags have been removed!</string>
    <string name="result_copied">Result copied to clipboard!</string>
    <string name="field_required">This field is required!</string>
    <string name="incorrect_length">Incorrect length!</string>
    <string name="post_too_long">Post is too long!</string>
    <string name="instagram_id">instagram_id</string>
    <string name="tiktok_id">tiktok_id</string>
    <string name="too_much_hashtags">Too much hashtags!</string>
    <string name="have_30_of_30">You already have 30/30 hashtags!</string>
    <string name="no_hashtags_found">No hashtags found!</string>
    <string name="not_enough_space">Not enough space to insert even a hashtag!</string>

    <string name="github_muhammadjon_url">http://github.com/MrHakimov/</string>
    <string name="github_amirjon_url">http://github.com/AmirjonQodirov/</string>
    <string name="github_behruz_url">http://github.com/MansurovB-source/</string>
    <string name="mail_muhammadjon_url">mailto:hakimov0777@gmail.com</string>
    <string name="mail_amirjon_url">mailto:amirqodirov8383@gmail.com</string>
    <string name="mail_behruz_url">mailto:bekha.m2000.bm@gmail.com</string>
    <string name="header_of_ad">Header of Ad</string>
    <string name="headline">headline</string>
    <string name="advertiser">advertiser</string>
    <string name="body_of_ad">body of ad</string>
    <string name="price">price</string>
    <string name="store">store</string>
    <string name="action">Action</string>
</resources>
