<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_post"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_post_add"
        android:title="@string/post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_blog"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_blog"
        android:title="@string/blog"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_info"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_info"
        android:title="@string/info"
        app:showAsAction="ifRoom" />
</menu>
