<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/item_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:foregroundGravity="center_horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/aboutUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:text="@string/about_us"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/devs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/devs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/div_gray_background"
                android:padding="12dp"
                app:layout_constraintBottom_toTopOf="@+id/feedback">

                <TextView
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/developed_by"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/div_gray_background"
                    android:stretchColumns="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about">

                    <TableRow
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/div_white_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:layout_margin="2dp"
                            android:background="@drawable/div_white_background"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="gitMuhammadjon"
                            android:padding="4dp"
                            android:text="@string/github_muhammadjon"
                            android:textColor="@android:color/holo_blue_dark" />
                    </TableRow>

                    <TableRow
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/div_white_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:layout_margin="2dp"
                            android:background="@drawable/div_white_background"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="gitAmir"
                            android:padding="4dp"
                            android:text="@string/github_amirjon"
                            android:textColor="@android:color/holo_blue_dark" />
                    </TableRow>

                    <TableRow
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/div_white_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:layout_margin="2dp"
                            android:background="@drawable/div_white_background"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="gitBehruz"
                            android:padding="4dp"
                            android:text="@string/github_behruz"
                            android:textColor="@android:color/holo_blue_dark" />
                    </TableRow>
                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/div_gray_background"
                android:padding="12dp"
                app:layout_constraintBottom_toTopOf="@+id/native_ad">

                <TextView
                    android:id="@+id/feedbacktext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mistakes_advices"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/tableLayoutMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/div_gray_background"
                    android:padding="5dp"
                    android:stretchColumns="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/feedbacktext"
                    app:layout_constraintVertical_bias="0.004"
                    tools:layout_editor_absoluteX="16dp">

                    <TableRow
                        android:layout_margin="2dp"
                        android:background="@drawable/div_white_background"
                        android:padding="2dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_margin="2dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="mailMuhammadjon"
                            android:text="@string/mail_muhammadjon"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="12sp" />
                    </TableRow>

                    <TableRow
                        android:layout_margin="2dp"
                        android:background="@drawable/div_white_background"
                        android:padding="2dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_margin="2dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="mailAmir"
                            android:text="@string/mail_amirjon"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="12sp" />
                    </TableRow>

                    <TableRow
                        android:layout_margin="2dp"
                        android:background="@drawable/div_white_background"
                        android:padding="2dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_margin="2dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="mailBehruz"
                            android:text="@string/mail_behruz"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="12sp" />
                    </TableRow>
                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/native_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feedback" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
